--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,13 +3,13 @@ services:
   ui:
     build: ./ui
     volumes:
-    - ./:/app
+    - ./ui:/app
     ports:
       - "3000:3000"
   backend:
     build: ./backend
     volumes:
-    - ./:/app
+    - ./backend:/app
     ports:
       - "5000:5000"
   postgres:
