--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,8 @@ services:
     - ./backend:/app
     ports:
       - "5000:5000"
+    depends_on:
+      - postgres
   postgres:
     image: "postgres:13"
     ports:
